@@ -65,6 +65,14 @@ class WCS_Object_Data_Cache_Manager extends WCS_Post_Meta_Cache_Manager {
 	public function init() {
 		add_action( "woocommerce_before_{$this->object_type}_object_save", [ $this, 'prepare_object_changes' ] );
 		add_action( "woocommerce_after_{$this->object_type}_object_save", [ $this, 'action_object_cache_changes' ] );
+
+		add_action( "woocommerce_before_delete_{$this->object_type}", [ $this, 'prepare_object_to_be_deleted' ], 10, 2 );
+		add_action( "woocommerce_delete_{$this->object_type}", [ $this, 'deleted' ] );
+
+		add_action( "woocommerce_before_trash_{$this->object_type}", [ $this, 'prepare_object_to_be_deleted' ], 10, 2 );
+		add_action( "woocommerce_trash_{$this->object_type}", [ $this, 'trashed' ] );
+
+		add_action( "woocommerce_untrash_{$this->object_type}", [ $this, 'untrashed' ] );
 	}
 
 	/**
@@ -185,6 +193,8 @@ class WCS_Object_Data_Cache_Manager extends WCS_Post_Meta_Cache_Manager {
 		}
 
 		if ( empty( $this->object_changes[ $object->get_id() ] ) ) {
+			// No changes to record. Unset the object ID to 'reset' $this->object_changes' state.
+			unset( $this->object_changes[ $object->get_id() ] );
 			return;
 		}
 
@@ -193,6 +203,86 @@ class WCS_Object_Data_Cache_Manager extends WCS_Post_Meta_Cache_Manager {
 
 		foreach ( $object_changes as $key => $change ) {
 			$this->trigger_update_cache_hook_from_change( $object, $key, $change );
+		}
+	}
+
+	/**
+	 * When an object is restored from the trash, action on object changes.
+	 *
+	 * @param int $object_id The object id being restored.
+	 */
+	public function untrashed( $object_id ) {
+		$object = $this->get_object( $object_id );
+		if ( null === $object ) {
+			return;
+		}
+
+		$this->action_object_cache_changes( $object );
+	}
+
+	/**
+	 * When an object is to be deleted, prepare object changes to update all fields
+	 * and mark those changes as deletes.
+	 *
+	 * @param int   $object_id The id of the object being deleted.
+	 * @param mixed $object    The object being deleted.
+	 */
+	public function prepare_object_to_be_deleted( $object_id, $object ) {
+		if ( ! $object->get_id() ) {
+			return;
+		}
+
+		$this->prepare_object_changes( $object, 'all_fields' );
+
+		if ( ! isset( $this->object_changes[ $object->get_id() ] ) ) {
+			return;
+		}
+
+		// If the object is being deleted, we want to record all the changes as deletes.
+		foreach ( $this->object_changes[ $object->get_id() ] as $data_key => $data ) {
+			$this->object_changes[ $object->get_id() ][ $data_key ]['type'] = 'delete';
+
+			if ( ! isset( $this->object_changes[ $object->get_id() ][ $data_key ]['previous'] ) ) {
+				$this->object_changes[ $object->get_id() ][ $data_key ]['previous'] = $data['new'];
+			}
+
+			if ( isset( $this->object_changes[ $object->get_id() ][ $data_key ]['new'] ) ) {
+				unset( $this->object_changes[ $object->get_id() ][ $data_key ]['new'] );
+			}
+		}
+	}
+
+	/**
+	 * When an object is trashed, action on object changes.
+	 *
+	 * @param int $object_id The id of object being restored.
+	 */
+	public function trashed( $object_id ) {
+		$object = $this->get_object( $object_id );
+		if ( null === $object ) {
+			return;
+		}
+
+		$this->action_object_cache_changes( $object );
+	}
+
+	/**
+	 * When an object has been deleted, trigger update cache hook on all the object changes.
+	 * We cannot use action_object_cache_changes(), which requires an object, here because
+	 * object has been deleted.
+	 *
+	 * @param int $object_id The id of the object being deleted.
+	 */
+	public function deleted( $object_id ) {
+		if ( ! isset( $this->object_changes[ $object_id ] ) ) {
+			return;
+		}
+
+		$object_changes = $this->object_changes[ $object_id ];
+		unset( $this->object_changes[ $object_id ] );
+
+		foreach ( $object_changes as $key => $change ) {
+			$this->trigger_update_cache_hook( $change['type'], $object_id, $key, $change['new'] );
 		}
 	}
 
@@ -220,6 +310,24 @@ class WCS_Object_Data_Cache_Manager extends WCS_Post_Meta_Cache_Manager {
 			default:
 				$this->trigger_update_cache_hook( $change['type'], $object->get_id(), $key, $change['new'] );
 				break;
+		}
+	}
+
+	/**
+	 * Fetches an instance of the object with the given ID.
+	 *
+	 * @param int $object_id The ID of the object to fetch.
+	 *
+	 * @return mixed The object instance, or null if it doesn't exist.
+	 */
+	private function get_object( $id ) {
+		switch ( $this->object_type ) {
+			case 'order':
+				return wc_get_order( $id );
+			case 'subscription':
+				return wcs_get_subscription( $id );
+			default:
+				return apply_filters( "wcs_object_data_cache_manager_get_{$this->object_type}_object", null, $id );
 		}
 	}
 }
